Sun May 26 22:46:52 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (AddMacroArg): Add check on macro argument uniqueness.

Sun May 26 21:54:20 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cop.c, m_cop.h: Rename to...
	* m_coprocessor.c, m_coprocessor.h: ...this.
	* m_copmem.c, m_copmem.h: Merge with m_coprocessor.c, m_coprocessor.h.
	* decode.c: Follow header file changes.
	* Makefile.am (asasm_SOURCES): Follow.

Sun May 26 21:35:06 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* help_cop.c (HelpCop_Addr): Follow Lit_RegisterFloat API change.
	* m_cpumem.c (dstmem): Follow Lit_RegisterInt API change.
	* area.h: Follow struct LITPOOL rename.
	* lit.c: Likewise.
	(LitAddrRange, oLitAddrRange): Add.
	(Lit_RegisterInt): Add address and instruction type parameters.
	(Lit_RegisterFloat): Likewise.
	* lit.h (Lit_eAddrType): Add.
	(Lit_RegisterInt, Lit_RegisterFloat): Add address and instruction type
	parameters.

	* unittests/compare/core/fpe_literal.s: Add LDC literal test case.

Sun May 26 21:25:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cop.c (m_cdp2, m_mcr2, m_mrc2): Merge into m_cdp, m_mcr and m_mrc.
	(m_cdp, m_mcr, m_mrc, coprocessor): Support Thumb.
	* m_cop.h (m_cdp2, m_mcr2, m_mrc2): Remove.
	* m_copmem.c (m_ldc2, m_stc2): Merge into m_ldc and m_stc.
	(m_ldc, m_stc, dstmem): Support Thumb.
	* m_copmem.h (m_ldc2, m_stc2): Remove.
	* decode.c (oDecodeTable): Follow the m_cdp2, m_mcr2, m_mrc2, m_ldc2,
	m_stc2 removal.
	* help_cop.c (HelpCop_Addr): Label case must support ValueInt, not
	ValueFloat.
	* m_fpe.c (dstmem): Use CPDST_OP instead of DST_OP.
	* m_fpe.h: Fix preprocessor double include test.
	* input.c (Input_IsEndOfKeywordN): Reworked from Input_IsEndOfKeyword.
	* input.h (Input_IsEndOfKeyword): Make inline.
	(Input_IsEndOfKeywordN): Add.
	* m_cpumem.c (m_swp): Drop the cc masking for IT_ApplyCond call.
	* option.c (GetCCodeIfThere): Factor out from Option_GetCCodeIfThere
	and add skipChars parameter.